syntax = "proto3";

package contactGrpcService;

import "google/protobuf/timestamp.proto";

option go_package = "./;contactGrpcService";

message Contact {
  string tenantID = 1;
  string UUID = 2;
  string firstName = 3;
  string lastName = 4;
}

message UpsertContactGrpcRequest {
  string id = 1;
  string tenant = 2;
  string firstName = 3;
  string lastName = 4;
  string name = 5;
  string prefix = 6;
  string appSource = 7;
  string source = 8;
  string sourceOfTruth = 9;
  google.protobuf.Timestamp  createdAt = 10;
  google.protobuf.Timestamp  updatedAt = 11;
}

message CreateContactGrpcRequest {
  string UUID = 1;
  string tenantID = 2;
  string firstName = 3;
  string lastName = 4;
}

message CreateContactGrpcResponse {
  string AggregateID = 1;
  string UUID = 2;
}

message ContactIdGrpcResponse {
  string id = 1;
}

service contactGrpcService {
  rpc CreateContact(CreateContactGrpcRequest) returns (CreateContactGrpcResponse);
  rpc UpsertContact(UpsertContactGrpcRequest) returns (ContactIdGrpcResponse);
}
