syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "common/source.proto";
import "common/external_system.proto";

option go_package = "api/grpc/v1/order;order_grpc_service";

message UpsertOrderGrpcRequest {
  SourceFields sourceFields = 1;
  ExternalSystemFields externalSystemFields = 2;

  string id = 3;
  string tenant = 4;
  string loggedInUserId = 5;
  google.protobuf.Timestamp createdAt = 6;
  google.protobuf.Timestamp updatedAt = 7;

  string organizationId = 8;

  optional google.protobuf.Timestamp confirmedAt = 9;
  optional google.protobuf.Timestamp paidAt = 10;
  optional google.protobuf.Timestamp fulfilledAt = 11;
  optional google.protobuf.Timestamp canceledAt = 12;
}

message OrderIdGrpcResponse {
  string id = 1;
}

service orderGrpcService {
  rpc UpsertOrder(UpsertOrderGrpcRequest) returns (OrderIdGrpcResponse);
}
